# MetalHLO

./: .gitignore  LICENSE  Package.swift  README.md
Examples/CExample/: CMakeLists.txt  main.c
Examples/FlaxExample/: _debug_intermediates.py  flax_metalhlo_bf16.py  flax_metalhlo_e2e.py  flax_metalhlo_example.py  flax_metalhlo_fp16.py  flax_metalhlo_layers.py  flax_metalhlo_nnx.py  flax_metalhlo_scan.py  flax_metalhlo_training.py  flax_metalhlo_vmap.py
Examples/JAXExample/: README.md  jax_metalhlo_example.py
Examples/PJRTExample/: Package.swift
Examples/SwiftExample/: Package.swift
Examples/vivsim/: README.md  flow_pass_cylinder.py  flow_through_text.py  lid_driven_cavity.py  poiseuille_channel.py  run_comparison.py  test_flow_pass_cylinder.py  test_flow_through_text.py  test_lid_driven_cavity.py  test_poiseuille_channel.py  test_vortex_induced_vibration.py  vortex_induced_vibration.py  vortex_induced_vibration_multigpu.py  vortex_induced_vibration_multigrid.py  vortex_induced_vibration_refinement.py
Sources/ANERuntime/: ANEAvailability.swift  ANEBuffer.swift  ANEDevice.swift  ANEError.swift  ANEProgram.swift  ANEWatchdog.swift  CompileCounter.swift  CoreMLBridge.swift  CoreMLModelBuilder.swift  CoreMLOp.swift  CoreMLProgram.swift  MILWeightTemplate.swift
Sources/BenchmarkRunner/: main.swift
Sources/CMetalHLO/: CInterface.swift
Sources/CPJRTApi/: shim.c
Sources/CalibrateTest/: main.swift
Sources/DepthAttentionBenchmark/: main.swift
Sources/GPT2EndToEnd/: main.swift
Sources/HeterogeneousFusion/: AttentionExecutor.swift  BenchmarkHarness.swift  ColumnSplitHelper.swift  ComputeUnit.swift  ContentionModel.swift  ConvolutionCPU.swift  ConvolutionGPU.swift  ConvolutionMPS.swift  ElementwiseCPU.swift  ElementwiseGPU.swift  EligibilityAnnotationPass.swift  EmbeddingCPU.swift  (+23 more)
python/: README.md  pyproject.toml
python/jax_plugins/metalhlo/: __init__.py  bytecode_to_text.py
(+192 files in other folders)
